--- a/src/component/BingoGrid/BingoGrid.css
+++ b/src/component/BingoGrid/BingoGrid.css
@@ -1,35 +1,24 @@
-.selected{
-    background-image: url('./../../assets/images/ball.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-
+.selected {
+  background-image: url("./../../assets/images/ball.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-.tada-right {
-    position: absolute;
-    bottom: 5%;
-    right: 0;
+.selected  span {
+    background: #ed832766;
 }
-.tada-left {
-    position: absolute;
-    bottom: 5%;
-    left: 0;
-    transform: scale(-1, 1);
+
+.grid-width {
+  width: 70px;
+  height: 70px;
+  min-width: 70px;
 }
-.grid-width{
-    width:  70px;
-    height: 70px;
-    min-width: 70px;
+
+@screen md {
+  .grid-width {
+    width: 120px;
+    height: 120px;
+    min-width: 120px;
   }
-
-
-
-  
-  @screen md {
-    .grid-width{
-        width: 120px;
-        height: 120px;
-        min-width: 120px;
-      }
-  }
+}
